src/components/ViewMarkdown.css
.splitterSolo .viewMarkdown {
  justify-content: center;
  display: flex;
  animation: fadein 200ms;
}

.viewMarkdown {
  min-height: 100%;
}

.splitterSolo .viewMarkdownContainer {
  border: 1px solid #ddd;
  margin: 32px;
  flex: 1;
}

.viewMarkdownStickyHeader {
  margin-left: 15px;
  text-align: right;
  position: sticky;
  top: var(--header-padding);
  height: 0;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  z-index: 1;
}

.viewMarkdownContainer {
  padding: 32px;
  max-width: 1000px;
  line-height: 1.5;
  border-radius: 6px;
  font-size: 16px;
}

.viewMarkdownDiv p {
  margin-top: 0;
  margin-bottom: 16px;
}

.viewMarkdownDiv h1,
.viewMarkdownDiv h2 {
  margin-top: 0;
  border-bottom: 1px solid #ddd;
}

.viewMarkdownDiv h1 {
  padding-bottom: .3em;
  font-size: 2em;
}

.viewMarkdownDiv h2 {
  padding-bottom: .3em;
  font-size: 1.5em;
}

.viewMarkdownDiv h3 {
  font-size: 1.25em;
}

.viewMarkdownDiv img {
  max-width: 100%;
}

.viewMarkdownDiv table {
  display: block;
  width: max-content;
  max-width: 100%;
  overflow: auto;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 1em;
}

.viewMarkdownDiv > *:first-child {
  margin-top: 0;
}

.viewMarkdownDiv table th,
.viewMarkdownDiv table td {
  padding: 6px 13px;
  border: 1px solid #ddd;
}

@media (max-width: 600px) {
  .viewMarkdownContainer,
  .splitterSolo .viewMarkdownContainer {
    margin: 0;
  }
}

/* The close button. */
.ͼ1 .cm-panel.cm-search [name="close"] {
  font-size: 21px;
  cursor: pointer;
  padding: 4px;
}

.dragging {
  outline: 2px solid #00f;
  border-radius: 4px;
  background: #00f1;
}

